INTYGFV-15326: Activating authentication i activeMQ in dev environment.

--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -17,6 +17,9 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
+activemq.broker.username=activemqUser
+activemq.broker.password=activemqPassword
+
 db.server = localhost
 db.port = 3306
 db.name = intyg
