INTYGFV-15326: Added property to mysql8 connection string. Seem to be necessary for dev environment.

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -21,7 +21,7 @@
 
 # Default DB (MySQL) configuration
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false&serverTimezone=Europe/Stockholm
+db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false&serverTimezone=Europe/Stockholm&allowPublicKeyRetrieval=true
 db.username=
 db.password=
 db.port=3306
