INTYGFV-15255: Updated build.args.

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -15,4 +15,4 @@ runtime.image.tag=9
 dependencies.infra.version=3.19.0.+
 dependencies.common.version=3.19.0.+
 
-build.args=build -PcodeQuality
+build.args=build testReport -PcodeQuality
