--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -6,8 +6,8 @@ artifact.version=3.18.1.1
 git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=release/2021-2
 
-builder.image=app-builder-image
-builder.image.tag=11.0.12
+builder.image=lib-builder-image
+builder.image.tag=11.0.2
 
 runtime.image=tomcat-java11-base
 runtime.image.tag=9
