INTYGFV-15255: Added context path for war name.

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -3,6 +3,8 @@ project.name=intyg
 artifact.name=intygstjanst
 artifact.version=3.18.1.1
 
+context.path=inera-certificate
+
 git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=release/2021-2
 
