INTYGFV-15255: Updated to parameterized Dockerfile. (#130)

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -3,11 +3,13 @@ project.name=intyg
 artifact.name=intygstjanst
 artifact.version=3.18.1.2
 
+context.path=inera-certificate
+
 git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=release/2021-2
 
-builder.image=lib-builder-image
-builder.image.tag=11.0.2
+builder.image=app-builder-image
+builder.image.tag=11.0.12
 
 runtime.image=tomcat-java11-base
 runtime.image.tag=9
