--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -136,3 +136,11 @@ fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
 
 # Use old format v1 or new v3 when sending TsBas RegisterCertificate to recipient
 tsbas.send.certificate.to.recipient.registercertificate.version=v3
+
+
+################################################
+#
+# Diagnoskapitel
+#
+################################################
+it.diagnosis.chapters.file=classpath:/diagnoskoder/diagnoskapitel.txt
