INTYGFV-15255: Added resolved infra and common versions.

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -17,4 +17,7 @@ runtime.image.tag=9
 dependencies.infra.version=3.19.1.+
 dependencies.common.version=3.19.1.+
 
+dependencies.infra.version.resolved=3.19.1.+
+dependencies.common.version.resolved=3.19.1.+
+
 build.args=build testReport -PcodeQuality
