--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -21,3 +21,4 @@ dependencies.infra.version.resolved=3.19.1.8
 dependencies.common.version.resolved=3.19.1.3
 
 build.args=build testReport -PcodeQuality
+sonarqube.args=
