--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,7 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=3.18.1.17
+artifact.version=3.18.1.20
 
 context.path=inera-certificate
 
@@ -17,7 +17,8 @@ runtime.image.tag=9
 dependencies.infra.version=3.19.1.+
 dependencies.common.version=3.19.1.+
 
-dependencies.infra.version.resolved=3.19.1.8
-dependencies.common.version.resolved=3.19.1.3
+dependencies.infra.version.resolved=3.19.1.9
+dependencies.common.version.resolved=3.19.1.4
 
 build.args=build testReport -PcodeQuality
+sonarqube.args=
