--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -6,7 +6,7 @@ artifact.version=3.18.1.32
 context.path=inera-certificate
 
 git.url=https://github.com/sklintyg/intygstjanst.git
-git.branch=release/2021-2
+git.branch=main
 
 builder.image=app-builder-image
 builder.image.tag=11.0.13
