--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,7 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=3.18.1.33
+artifact.version=3.18.2.0
 
 context.path=inera-certificate
 
@@ -11,8 +11,8 @@ git.branch=main
 builder.image=app-builder-image
 builder.image.tag=11.0.13
 
-runtime.image=tomcat-java11-base
-runtime.image.tag=9
+runtime.image=tomcat-base
+runtime.image.tag=9.0.78.2
 
 dependencies.infra.version=3.19.1.+
 dependencies.common.version=3.19.1.+
