--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ allprojects {
     repositories {
         mavenLocal()
         maven { url "http://172.21.0.1:37373/repository/it-public/" }
-        maven { url "http://localhost:37373/repository/it-public/" }
+        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
         mavenCentral {
             content {
                 // this repository contains everything BUT artifacts with group starting with "se.inera"
