--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,22 @@ plugins {
 }
 
 ext {
-    commonVersion = System.properties['commonVersion'] ?: '3.19.1-SNAPSHOT'
-    infraVersion = System.properties['infraVersion'] ?: '3.19.1-SNAPSHOT'
+    commonVersion = System.properties['commonVersion'] ?: '3.20.0-SNAPSHOT'
+    infraVersion = System.properties['infraVersion'] ?: '3.20.0-SNAPSHOT'
     refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'
 
-    schemasContractVersion = "2.1.8"
-
-    intygHealthcondRehabilitationSchemasVersion = "1.1.3"
-    intygClinicalprocessSchemasVersion = "1.0.24"
-    rivtaClinicalprocessSchemasVersion = "4.0.5"
-    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5"
+    intygHealthcondRehabilitationSchemasVersion = "1.1.3.1"
+    intygClinicalprocessSchemasVersion = "1.0.24.1"
+    rivtaClinicalprocessSchemasVersion = "4.0.5.1"
+    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5.1"
+    schemasContractVersion = "2.1.8.1"
 
     cxfVersion = "3.5.5"
     geronimoJmsVersion = "1.1.1"
     jadiraUserTypeVersion = "6.0.1.GA"
     jakartaJwsApiVersion = "3.0.0"
+    javaxJwsApiVersion = "1.1"
+    jaxb2Version = "0.13.1"
     picocliVersion = "4.6.3"
     stAntlr4Version = "4.3.4"
     shedlockSpringVersion = "4.42.0"
@@ -54,6 +55,8 @@ allprojects {
     }
 
     dependencies {
+        implementation "javax.jws:javax.jws-api:${javaxJwsApiVersion}"
+
         compile "javax.annotation:javax.annotation-api"
         compile "jakarta.xml.bind:jakarta.xml.bind-api"
         compile "jakarta.xml.ws:jakarta.xml.ws-api"
