INTYGFV-16010: Added configuration for intygproxyservice.

--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -31,6 +31,7 @@ db.pool.maxSize=5
 db.httpPort=8082
 
 internal.api.port=${dev.http.port.internal}
+integration.intygproxyservice.baseurl=http://localhost:18020
 
 redis.password=redis
 
