--- a/tools/liquibase-runner/build.gradle
+++ b/tools/liquibase-runner/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'application'
+apply plugin: 'java'
 
 mainClassName = "liquibase.integration.commandline.LiquibaseCommandLine"
 applicationDefaultJvmArgs = ["-Dfile.encoding=utf8", "-Dliquibase.headless=true"]
 
 startScripts {
     doLast {
-        def persistenceDependency = configurations.runtime.filter { it.name.startsWith("intygstjanst-persistence") }.singleFile.name
+        def persistenceDependency = configurations.runtimeOnly.filter { it.name.startsWith("intygstjanst-persistence") }.singleFile.name
 
         def originalScript = unixScript.text
         unixScript.text = unixScript.text.replaceAll(/\s\s"\$@"\n/, '  --driver=com.mysql.cj.jdbc.Driver --classpath=lib/'
@@ -24,26 +25,36 @@ startScripts {
     }
 }
 
-uploadArchives.enabled = true
+publishing {
+    publications {
+        mavenWeb(MavenPublication) {
+            from components.java
 
-artifacts {
-    archives distZip
+            def liquibaseRunner = "${rootProject.name}-liquibase-runner-${version}"
+            def liquibaseRunnerPath = "${project.layout.buildDirectory.get().asFile}/distributions/${liquibaseRunner}"
+            artifact "${liquibaseRunnerPath}.zip"
+            artifact "${liquibaseRunnerPath}.tar"
+
+            publishMavenWebPublicationToMavenLocal.dependsOn distTar
+            publishMavenWebPublicationToMavenLocal.dependsOn distZip
+        }
+    }
 }
 
-configurations.runtime {
+artifacts { archives distZip }
+sonarqube { skipProject = true }
+
+configurations.runtimeOnly {
+    setCanBeResolved(true)
     transitive = false
-}
-
-sonarqube {
-    skipProject = true
 }
 
 def liquibaseVersion = dependencyManagement.managedVersions['org.liquibase:liquibase-core']
 
 dependencies {
-    compile "info.picocli:picocli:${picocliVersion}"
-    runtime "com.mysql:mysql-connector-j"
-    runtime "org.liquibase:liquibase-core"
-    runtime "org.liquibase.ext:liquibase-hibernate5:" + liquibaseVersion
-    runtime project(':intygstjanst-persistence')
+    implementation "info.picocli:picocli:${picocliVersion}"
+    runtimeOnly "com.mysql:mysql-connector-j"
+    runtimeOnly "org.liquibase:liquibase-core"
+    runtimeOnly "org.liquibase.ext:liquibase-hibernate5:${liquibaseVersion}"
+    runtimeOnly project(':intygstjanst-persistence')
 }
