--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,26 +1,11 @@
-apply plugin: 'war'
 apply plugin: 'org.gretty'
-
-test {
-    exclude '**/*IT*'
-}
-
-task restAssuredTest(type: Test) {
-    outputs.upToDateWhen { false }
-    systemProperty "integration.tests.baseUrl", System.properties['baseUrl'] ?: "http://localhost:8080/"
-    systemProperty "integration.tests.actuatorUrl", System.properties['actuatorUrl'] ?: "http://localhost:8180"
-    include '**/*IT*'
-    useJUnitPlatform()
-}
-
-war.dependsOn createVersionPropertyFile
+apply plugin: 'war'
 
 gretty {
     def instance = System.properties['instance'] ?: '0'
     def useHttpPort = 8080 + (instance as Integer)
     def useInternalHttpPort = 8180 + (instance as Integer)
     def applicationDir = "${rootProject.projectDir}/devops/dev"
-
 
     servletContainer = 'tomcat9'
     contextPath = '/inera-certificate'
@@ -46,78 +31,107 @@ gretty {
             "-Ddev.http.port.internal=${useInternalHttpPort}",
             "-Dxml.catalog.cacheEnabled=false"
     ]
+
+    dependencies { implementation "se.inera.intyg.refdata:refdata:${refDataVersion}" }
+}
+
+test { exclude '**/*IT*' }
+war.dependsOn createVersionPropertyFile
+
+tasks.register('restAssuredTest', Test) {
+    outputs.upToDateWhen { false }
+    systemProperty "integration.tests.baseUrl", System.properties['baseUrl'] ?: "http://localhost:8080/"
+    systemProperty "integration.tests.actuatorUrl", System.properties['actuatorUrl'] ?: "http://localhost:8180"
+    include '**/*IT*'
+    useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        mavenWeb(MavenPublication) {
+            from components.web
+        }
+    }
 }
 
 dependencies {
-    compile project(':intygstjanst-persistence')
+    implementation project(':intygstjanst-persistence')
 
+    implementation "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schemas:${intygClinicalprocessSchemasVersion}"
+    implementation "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
+    implementation "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
+    implementation "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
+    implementation "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
+    implementation "se.riv.insuranceprocess.healthreporting:insuranceprocess-healthreporting-schemas:${rivtaInsuranceprocessSchemasVersion}"
+    implementation "se.riv.strategicresourcemanagement.persons.person:strategicresourcemanagement-persons-person-schemas:${rivtaGetPersonsPersonSchemasVersion}"
+
+    implementation "se.inera.intyg.infra:hsa-api-integration:${infraVersion}"
+    implementation "se.inera.intyg.infra:hsatk-integration:${infraVersion}"
+    implementation "se.inera.intyg.infra:pu-integration:${infraVersion}"
+    implementation "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
+    implementation "se.inera.intyg.infra:monitoring:${infraVersion}"
+    implementation "se.inera.intyg.infra:security-filter:${infraVersion}"
+    implementation "se.inera.intyg.infra:intyginfo:${infraVersion}"
+    implementation "se.inera.intyg.infra:testcertificate:${infraVersion}"
+    implementation "se.inera.intyg.infra:message:${infraVersion}"
+    implementation "se.inera.intyg.infra:certificate:${infraVersion}"
+
+    implementation "se.inera.intyg.common:common-support:${commonVersion}"
+    implementation "se.inera.intyg.common:common-services:${commonVersion}"
+    implementation "se.inera.intyg.common:integration-util:${commonVersion}"
+    implementation "se.inera.intyg.common:common-schemas:${commonVersion}"
+    implementation "se.inera.intyg.common:fk7263:${commonVersion}"
+    implementation "se.inera.intyg.common:fk-parent:${commonVersion}"
+    implementation "se.inera.intyg.common:ts-bas:${commonVersion}"
+    implementation "se.inera.intyg.common:ts-diabetes:${commonVersion}"
+    implementation "se.inera.intyg.common:tstrk1009:${commonVersion}"
+    implementation "se.inera.intyg.common:tstrk1062:${commonVersion}"
+    implementation "se.inera.intyg.common:luse:${commonVersion}"
+    implementation "se.inera.intyg.common:lisjp:${commonVersion}"
+    implementation "se.inera.intyg.common:luae_fs:${commonVersion}"
+    implementation "se.inera.intyg.common:luae_na:${commonVersion}"
+    implementation "se.inera.intyg.common:db:${commonVersion}"
+    implementation "se.inera.intyg.common:doi:${commonVersion}"
+    implementation "se.inera.intyg.common:af00213:${commonVersion}"
+    implementation "se.inera.intyg.common:af00251:${commonVersion}"
+    implementation "se.inera.intyg.common:ag114:${commonVersion}"
+    implementation "se.inera.intyg.common:ag7804:${commonVersion}"
+
+    implementation "com.google.guava:guava:${guavaVersion}"
+    implementation "com.mysql:mysql-connector-j"
+    implementation "com.sun.activation:jakarta.activation"
+    implementation "commons-io:commons-io:${commonsIoVersion}"
+    implementation "io.prometheus:simpleclient_servlet"
+    implementation "jakarta.transaction:jakarta.transaction-api"
+    implementation "jakarta.ws.rs:jakarta.ws.rs-api"
+    implementation "net.javacrumbs.shedlock:shedlock-spring:${shedlockSpringVersion}"
+    implementation "net.javacrumbs.shedlock:shedlock-provider-redis-spring:${shedlockSpringVersion}"
+    implementation "org.antlr:ST4:${stAntlr4Version}"
+    implementation "org.apache.activemq:activemq-spring"
+    implementation "org.apache.cxf:cxf-rt-features-logging:${cxfVersion}"
+    implementation "org.apache.cxf:cxf-rt-frontend-jaxws:${cxfVersion}"
     implementation "org.jvnet.jaxb2_commons:jaxb2-basics:${jaxb2Version}"
-
-    compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schemas:${intygClinicalprocessSchemasVersion}"
-    compile "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
-    compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
-
-    compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
-    compile "se.inera.intyg.infra:hsatk-integration:${infraVersion}"
-    compile "se.inera.intyg.infra:pu-integration:${infraVersion}"
-    compile "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
-    compile "se.inera.intyg.infra:monitoring:${infraVersion}"
-    compile "se.inera.intyg.infra:security-filter:${infraVersion}"
-    compile "se.inera.intyg.infra:intyginfo:${infraVersion}"
-    compile "se.inera.intyg.infra:testcertificate:${infraVersion}"
-    compile "se.inera.intyg.infra:message:${infraVersion}"
-    compile "se.inera.intyg.infra:certificate:${infraVersion}"
-
-    compile "se.inera.intyg.common:common-support:${commonVersion}"
-    compile "se.inera.intyg.common:integration-util:${commonVersion}"
-    compile "se.inera.intyg.common:common-schemas:${commonVersion}"
-    compile "se.inera.intyg.common:fk7263:${commonVersion}"
-    compile "se.inera.intyg.common:ts-bas:${commonVersion}"
-    compile "se.inera.intyg.common:ts-diabetes:${commonVersion}"
-    compile "se.inera.intyg.common:tstrk1009:${commonVersion}"
-    compile "se.inera.intyg.common:tstrk1062:${commonVersion}"
-    compile "se.inera.intyg.common:luse:${commonVersion}"
-    compile "se.inera.intyg.common:lisjp:${commonVersion}"
-    compile "se.inera.intyg.common:luae_fs:${commonVersion}"
-    compile "se.inera.intyg.common:luae_na:${commonVersion}"
-    compile "se.inera.intyg.common:db:${commonVersion}"
-    compile "se.inera.intyg.common:doi:${commonVersion}"
-    compile "se.inera.intyg.common:af00213:${commonVersion}"
-    compile "se.inera.intyg.common:af00251:${commonVersion}"
-    compile "se.inera.intyg.common:ag114:${commonVersion}"
-    compile "se.inera.intyg.common:ag7804:${commonVersion}"
-
-
-    compile "com.sun.activation:jakarta.activation"
-
-    compile "org.apache.activemq:activemq-spring"
-    compile "org.apache.cxf:cxf-rt-features-logging:${cxfVersion}"
-    compile "org.apache.cxf:cxf-rt-frontend-jaxws:${cxfVersion}"
-    compile "org.springframework:spring-jms"
-    compile "org.springframework:spring-webmvc"
-    compile "com.mysql:mysql-connector-j"
-    compile "net.javacrumbs.shedlock:shedlock-spring:${shedlockSpringVersion}"
-    compile "net.javacrumbs.shedlock:shedlock-provider-redis-spring:${shedlockSpringVersion}"
+    implementation "org.springframework:spring-jms"
+    implementation "org.springframework:spring-webmvc"
+    implementation "org.springframework.data:spring-data-jpa"
 
     compileOnly "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
-    compileOnly "javax.servlet:javax.servlet-api"
+    compileOnly "jakarta.servlet:jakarta.servlet-api"
+    compileOnly "jakarta.persistence:jakarta.persistence-api"
 
-    testCompile "org.assertj:assertj-core"
-    testCompile "org.springframework:spring-test"
-    testCompile "org.xmlunit:xmlunit-legacy"
-
-    testCompile "io.rest-assured:rest-assured"
-    testCompile "io.rest-assured:json-schema-validator"
-
-    testCompile "org.hamcrest:hamcrest-library"
-    testCompile "org.antlr:ST4:${stAntlr4Version}"
-    testCompile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
+    testImplementation "ch.qos.logback:logback-classic"
+    testImplementation "io.rest-assured:json-schema-validator"
+    testImplementation "io.rest-assured:rest-assured"
+    testImplementation "jakarta.persistence:jakarta.persistence-api"
+    testImplementation "org.antlr:ST4:${stAntlr4Version}"
+    testImplementation "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
+    testImplementation "org.assertj:assertj-core"
+    testImplementation "org.hamcrest:hamcrest-library"
+    testImplementation "org.springframework:spring-test"
+    testImplementation "org.xmlunit:xmlunit-legacy"
 
     // We explicitly declare this as a testRuntime dependency so Restassured tests loads the correct XSD for
     // SetCertificateStatusResponder_1.0.xsd (as it exists in two different schemas)
-    testRuntime "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
-    testRuntime "javax.servlet:javax.servlet-api"
-
-    gretty "se.inera.intyg.refdata:refdata:${refDataVersion}"
-    compile "org.antlr:ST4:${stAntlr4Version}"
+    testRuntimeOnly "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
+    testRuntimeOnly "jakarta.servlet:jakarta.servlet-api"
 }
