--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "se.inera.intyg.plugin.common" version "3.2.10-SNAPSHOT" apply false
     id "io.spring.dependency-management" version "1.1.3" apply false
     id "org.gretty" version "3.1.1" apply false
+    id 'test-report-aggregation'
 }
 
 ext {
@@ -38,6 +39,11 @@ allprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'java'
 
+    group = 'se.inera.intyg.intygstjanst'
+    version = System.properties['buildVersion'] ?: '0.0-SNAPSHOT'
+    sourceCompatibility = 11
+    targetCompatibility = 11
+
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
@@ -68,29 +74,28 @@ allprojects {
         testAnnotationProcessor 'org.projectlombok:lombok'
     }
 
-    if (project.hasProperty('codeQuality')) {
-        dependencies { spotbugsSlf4j "org.slf4j:slf4j-simple" }
-    }
-
-    group = 'se.inera.intyg.intygstjanst'
-    version = System.properties['buildVersion'] ?: '0.0-SNAPSHOT'
-
-    sourceCompatibility = 11
-    targetCompatibility = 11
-
-    compileJava { options.encoding = "UTF-8" }
-    test { useJUnitPlatform() }
-
-    tasks.register('createVersionPropertyFile', VersionPropertyFileTask)
-
     tasks.register('install') {
         description("Publishes artifact to local maven repository.")
         dependsOn(publishMavenWebPublicationToMavenLocal)
     }
 
+    tasks.register('createVersionPropertyFile', VersionPropertyFileTask)
+
+    compileJava { options.encoding = "UTF-8" }
     compileJava.dependsOn processResources
     compileTestJava.dependsOn createVersionPropertyFile
     checkstyleMain.dependsOn createVersionPropertyFile
+    test { useJUnitPlatform() }
+
+    repositories {
+        mavenLocal()
+        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
+        mavenCentral {
+            content {
+                excludeGroupByRegex "se\\.inera.*"
+            }
+        }
+    }
 
     if (!project.name.contains("-web") && !project.name.contains("-liquibase-runner")) {
         publishing {
@@ -102,32 +107,19 @@ allprojects {
         }
     }
 
-    repositories {
-        mavenLocal()
-        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
-        mavenCentral {
-            content {
-                // this repository contains everything BUT artifacts with group starting with "se.inera"
-                excludeGroupByRegex "se\\.inera.*"
-            }
-        }
-    }
-
     clean {
         setDelete(fileTree(project.layout.buildDirectory.get().asFile) {
             exclude("/tmp/.cache/expanded/expanded.lock")
         })
     }
+
+    if (project.hasProperty('codeQuality')) {
+        dependencies { spotbugsSlf4j "org.slf4j:slf4j-simple" }
+    }
 }
 
 tasks.register('tagRelease', TagReleaseTask)
 
-gradle.taskGraph.whenReady {
-    def runningRestAssuredTest = false
-    project('intygstjanst-web') { runningRestAssuredTest = gradle.taskGraph.getAllTasks().contains(restAssuredTest) }
-
-    if (runningRestAssuredTest) {
-        project('intygstjanst-web') { test.enabled(false) }
-        project('intygstjanst-persistence') { test.enabled(false) }
-    }
+subprojects.collect {subproject -> subproject.name }.each { subprojectName ->
+    dependencies { testReportAggregation project(":${subprojectName}") }
 }
