BUILDENV: Set up intygstjanst for local test build

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -20,5 +20,5 @@ dependencies.common.version=3.20.0.+
 dependencies.infra.version.resolved=3.20.0.2
 dependencies.common.version.resolved=3.20.0.4
 
-build.args=build testReport -PcodeQuality
+build.args=build testAggregateTestReport -PcodeQuality
 sonarqube.args=
