--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "se.inera.intyg.plugin.common" version "3.2.10-SNAPSHOT" apply false
+    id "se.inera.intyg.plugin.common" version "3.2.10" apply false
     id "io.spring.dependency-management" version "1.1.3" apply false
     id "org.gretty" version "3.1.1" apply false
     id 'test-report-aggregation'
@@ -88,6 +88,10 @@ allprojects {
     test { useJUnitPlatform() }
 
     repositories {
+        maven {
+            url "http://172.21.0.1:37373/repository/it-public/"
+            allowInsecureProtocol = true
+        }
         mavenLocal()
         maven { url "https://nexus.drift.inera.se/repository/it-public/" }
         mavenCentral {
