--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,10 @@ pluginManagement {
     repositories {
         mavenLocal()
         maven { url "https://nexus.drift.inera.se/repository/it-public/" }
+        maven {
+            url "http://172.21.0.1:37373/repository/it-public/"
+            allowInsecureProtocol = true
+        }
         gradlePluginPortal()
     }
 }
