--- a/web/build.gradle
+++ b/web/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
     compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
     compile "se.inera.intyg.infra:hsatk-integration:${infraVersion}"
+    implementation "se.inera.intyg.infra:hsa-integration-api:${infraVersion}"
+    runtimeOnly "se.inera.intyg.infra:hsa-integration-intyg-proxy-service:${infraVersion}"
     compile "se.inera.intyg.infra:pu-integration:${infraVersion}"
     compile "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
     compile "se.inera.intyg.infra:monitoring:${infraVersion}"
