--- a/web/build.gradle
+++ b/web/build.gradle
@@ -46,14 +46,6 @@ tasks.register('restAssuredTest', Test) {
     useJUnitPlatform()
 }
 
-publishing {
-    publications {
-        mavenWeb(MavenPublication) {
-            from components.web
-        }
-    }
-}
-
 dependencies {
     implementation project(':intygstjanst-persistence')
 
@@ -61,45 +53,43 @@ dependencies {
     implementation "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
     implementation "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
     implementation "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
-    implementation "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
     implementation "se.riv.insuranceprocess.healthreporting:insuranceprocess-healthreporting-schemas:${rivtaInsuranceprocessSchemasVersion}"
+    implementation "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
     implementation "se.riv.strategicresourcemanagement.persons.person:strategicresourcemanagement-persons-person-schemas:${rivtaGetPersonsPersonSchemasVersion}"
 
+    implementation "se.inera.intyg.infra:certificate:${infraVersion}"
     implementation "se.inera.intyg.infra:hsa-integration-api:${infraVersion}"
     implementation "se.inera.intyg.infra:hsatk-integration:${infraVersion}"
-    implementation "se.inera.intyg.infra:pu-integration:${infraVersion}"
-    implementation "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
-    implementation "se.inera.intyg.infra:monitoring:${infraVersion}"
-    implementation "se.inera.intyg.infra:security-filter:${infraVersion}"
     implementation "se.inera.intyg.infra:intyginfo:${infraVersion}"
-    implementation "se.inera.intyg.infra:testcertificate:${infraVersion}"
     implementation "se.inera.intyg.infra:message:${infraVersion}"
-    implementation "se.inera.intyg.infra:certificate:${infraVersion}"
+    implementation "se.inera.intyg.infra:monitoring:${infraVersion}"
+    implementation "se.inera.intyg.infra:pu-integration:${infraVersion}"
+    implementation "se.inera.intyg.infra:security-filter:${infraVersion}"
+    implementation "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
+    implementation "se.inera.intyg.infra:testcertificate:${infraVersion}"
 
-    implementation "se.inera.intyg.common:common-support:${commonVersion}"
-    implementation "se.inera.intyg.common:common-services:${commonVersion}"
-    implementation "se.inera.intyg.common:integration-util:${commonVersion}"
-    implementation "se.inera.intyg.common:common-schemas:${commonVersion}"
-    implementation "se.inera.intyg.common:fk7263:${commonVersion}"
-    implementation "se.inera.intyg.common:fk-parent:${commonVersion}"
-    implementation "se.inera.intyg.common:ts-bas:${commonVersion}"
-    implementation "se.inera.intyg.common:ts-diabetes:${commonVersion}"
-    implementation "se.inera.intyg.common:tstrk1009:${commonVersion}"
-    implementation "se.inera.intyg.common:tstrk1062:${commonVersion}"
-    implementation "se.inera.intyg.common:luse:${commonVersion}"
-    implementation "se.inera.intyg.common:lisjp:${commonVersion}"
-    implementation "se.inera.intyg.common:luae_fs:${commonVersion}"
-    implementation "se.inera.intyg.common:luae_na:${commonVersion}"
-    implementation "se.inera.intyg.common:db:${commonVersion}"
-    implementation "se.inera.intyg.common:doi:${commonVersion}"
     implementation "se.inera.intyg.common:af00213:${commonVersion}"
     implementation "se.inera.intyg.common:af00251:${commonVersion}"
     implementation "se.inera.intyg.common:ag114:${commonVersion}"
     implementation "se.inera.intyg.common:ag7804:${commonVersion}"
+    implementation "se.inera.intyg.common:common-schemas:${commonVersion}"
+    implementation "se.inera.intyg.common:common-services:${commonVersion}"
+    implementation "se.inera.intyg.common:common-support:${commonVersion}"
+    implementation "se.inera.intyg.common:db:${commonVersion}"
+    implementation "se.inera.intyg.common:doi:${commonVersion}"
+    implementation "se.inera.intyg.common:fk-parent:${commonVersion}"
+    implementation "se.inera.intyg.common:fk7263:${commonVersion}"
+    implementation "se.inera.intyg.common:integration-util:${commonVersion}"
+    implementation "se.inera.intyg.common:lisjp:${commonVersion}"
+    implementation "se.inera.intyg.common:luae_fs:${commonVersion}"
+    implementation "se.inera.intyg.common:luae_na:${commonVersion}"
+    implementation "se.inera.intyg.common:luse:${commonVersion}"
+    implementation "se.inera.intyg.common:ts-bas:${commonVersion}"
+    implementation "se.inera.intyg.common:ts-diabetes:${commonVersion}"
+    implementation "se.inera.intyg.common:tstrk1009:${commonVersion}"
+    implementation "se.inera.intyg.common:tstrk1062:${commonVersion}"
 
     implementation "com.google.guava:guava:${guavaVersion}"
-    implementation "com.mysql:mysql-connector-j"
-    implementation "com.sun.activation:jakarta.activation"
     implementation "commons-io:commons-io:${commonsIoVersion}"
     implementation "io.prometheus:simpleclient_servlet"
     implementation "jakarta.transaction:jakarta.transaction-api"
@@ -115,21 +105,14 @@ dependencies {
     implementation "org.springframework:spring-webmvc"
     implementation "org.springframework.data:spring-data-jpa"
 
-    compileOnly "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
-    compileOnly "jakarta.servlet:jakarta.servlet-api"
     compileOnly "jakarta.persistence:jakarta.persistence-api"
     runtimeOnly "se.inera.intyg.infra:hsa-integration-intyg-proxy-service:${infraVersion}"
+    runtimeOnly "com.mysql:mysql-connector-j"
 
-    testImplementation "ch.qos.logback:logback-classic"
-    testImplementation "io.rest-assured:json-schema-validator"
-    testImplementation "io.rest-assured:rest-assured"
-    testImplementation "jakarta.persistence:jakarta.persistence-api"
-    testImplementation "org.antlr:ST4:${stAntlr4Version}"
-    testImplementation "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
-    testImplementation "org.assertj:assertj-core"
-    testImplementation "org.hamcrest:hamcrest-library"
     testImplementation "org.springframework:spring-test"
     testImplementation "org.xmlunit:xmlunit-legacy"
+
+    testCompileOnly "jakarta.persistence:jakarta.persistence-api"
 
     // We explicitly declare this as a testRuntime dependency so Restassured tests loads the correct XSD for
     // SetCertificateStatusResponder_1.0.xsd (as it exists in two different schemas)
