--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,15 @@ import java.nio.file.Files
 import java.nio.file.Paths
 
 plugins {
-    id "se.inera.intyg.plugin.common" version "3.2.10-SNAPSHOT" apply false
+    id "se.inera.intyg.plugin.common" version "3.3.1" apply false
     id "io.spring.dependency-management" version "1.1.3" apply false
     id "org.gretty" version "3.1.1" apply false
     id 'test-report-aggregation'
 }
 
 ext {
-    commonVersion = System.properties['commonVersion'] ?: '3.20.0-SNAPSHOT'
-    infraVersion = System.properties['infraVersion'] ?: '3.20.0-SNAPSHOT'
+    commonVersion = System.properties['commonVersion'] ?: '3.21.0-SNAPSHOT'
+    infraVersion = System.properties['infraVersion'] ?: '3.21.0-SNAPSHOT'
     refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'
 
     intygHealthcondRehabilitationSchemasVersion = "1.1.3.1"
@@ -43,7 +43,7 @@ allprojects {
     apply plugin: 'java'
 
     group = 'se.inera.intyg.intygstjanst'
-    version = System.properties['buildVersion'] ?: '0.0-SNAPSHOT'
+    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
     sourceCompatibility = 11
     targetCompatibility = 11
 
