--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,7 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=3.18.2.26
+artifact.version=3.19.0.0
 
 context.path=inera-certificate
 
@@ -9,16 +9,16 @@ git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=main
 
 builder.image=app-builder-image
-builder.image.tag=11.0.13
+builder.image.tag=11.0.14
 
 runtime.image=tomcat-base
 runtime.image.tag=9.0.78.3
 
-dependencies.infra.version=3.20.0.+
-dependencies.common.version=3.20.0.+
+dependencies.infra.version=3.21.0.+
+dependencies.common.version=3.21.0.+
 
 dependencies.infra.version.resolved=3.20.0.7
 dependencies.common.version.resolved=3.20.0.7
 
-build.args=build testReport -PcodeQuality
+build.args=build testAggregateTestReport -PcodeQuality -x SpotBugsMain
 sonarqube.args=
