--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -20,5 +20,5 @@ dependencies.common.version=3.21.0.+
 dependencies.infra.version.resolved=3.21.0.1
 dependencies.common.version.resolved=3.21.0.1
 
-build.args=build testAggregateTestReport -PcodeQuality -x SpotBugsMain
+build.args=build testAggregateTestReport -PcodeQuality
 sonarqube.args=
