--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ import java.nio.file.Files
 import java.nio.file.Paths
 
 plugins {
-    id "se.inera.intyg.plugin.common" version "3.3.1" apply false
+    id "se.inera.intyg.plugin.common" version "3.3.2-SNAPSHOT" apply false
     id "io.spring.dependency-management" version "1.1.3" apply false
-    id "org.gretty" version "3.1.1" apply false
+    id "org.gretty" version "4.1.1" apply false
     id 'test-report-aggregation'
 }
 
@@ -15,26 +15,34 @@ ext {
     infraVersion = System.properties['infraVersion'] ?: '3.21.0-SNAPSHOT'
     refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'
 
-    intygHealthcondRehabilitationSchemasVersion = "1.1.3.1"
-    intygClinicalprocessSchemasVersion = "1.0.24.1"
-    rivtaClinicalprocessSchemasVersion = "4.0.5.2"
-    rivtaGetPersonsPersonSchemasVersion = "3.1.1.1"
-    rivtaInsuranceprocessSchemasVersion = "3.1.0.5.1"
-    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5.1"
-    schemasContractVersion = "2.1.8.1"
+//    intygHealthcondRehabilitationSchemasVersion = "1.1.3.1"
+//    intygClinicalprocessSchemasVersion = "1.0.24.1"
+//    rivtaClinicalprocessSchemasVersion = "4.0.5.2"
+//    rivtaGetPersonsPersonSchemasVersion = "3.1.1.1"
+//    rivtaInsuranceprocessSchemasVersion = "3.1.0.5.1"
+//    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5.1"
+//    schemasContractVersion = "2.1.8.1"
+
+    intygHealthcondRehabilitationSchemasVersion = "0-SNAPSHOT"
+    intygClinicalprocessSchemasVersion = "0-SNAPSHOT"
+    rivtaClinicalprocessSchemasVersion = "0-SNAPSHOT"
+    rivtaGetPersonsPersonSchemasVersion = "0-SNAPSHOT"
+    rivtaInsuranceprocessSchemasVersion = "0-SNAPSHOT"
+    rivtaItintegrationMonitoringSchemasVersion = "0-SNAPSHOT"
+    schemasContractVersion = "0-SNAPSHOT"
 
     commonsIoVersion = "2.14.0"
-    cxfVersion = "3.6.2"
+    cxfVersion = "4.0.3"
     geronimoJmsVersion = "1.1.1"
     guavaVersion = "32.1.3-jre"
-    jadiraUserTypeVersion = "6.0.1.GA"
-    jakartaJwsApiVersion = "2.1.0" // version 3.0.0 -> warning: "class file for javax.jws.soap.SOAPBinding$ParameterStyle not found"
-    jaxb2Version = "0.13.1"
+    jadiraUserTypeVersion = "7.0.0.CR1"
+    jakartaJwsApiVersion = "3.0.0"
+    jaxb2Version = "3.0.0"
     picocliVersion = "4.7.5"
     stAntlr4Version = "4.3.4"
     shedlockSpringVersion = "4.46.0"
 
-    springbootMavenBomVersion = "2.7.17"
+    springbootMavenBomVersion = "3.1.5"
 }
 
 allprojects {
@@ -44,8 +52,8 @@ allprojects {
 
     group = 'se.inera.intyg.intygstjanst'
     version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = 17
+    targetCompatibility = 17
 
     dependencyManagement {
         imports {
