--- a/web/build.gradle
+++ b/web/build.gradle
@@ -7,7 +7,7 @@ gretty {
     def useInternalHttpPort = 8180 + (instance as Integer)
     def applicationDir = "${rootProject.projectDir}/devops/dev"
 
-    servletContainer = 'tomcat9'
+    servletContainer = 'tomcat10'
     contextPath = '/inera-certificate'
 
     integrationTestTask = null
@@ -100,7 +100,7 @@ dependencies {
     implementation "org.apache.activemq:activemq-spring"
     implementation "org.apache.cxf:cxf-rt-features-logging:${cxfVersion}"
     implementation "org.apache.cxf:cxf-rt-frontend-jaxws:${cxfVersion}"
-    implementation "org.jvnet.jaxb2_commons:jaxb2-basics:${jaxb2Version}"
+    implementation "codes.rafael.jaxb2_commons:jaxb2-basics:${jaxb2Version}"
     implementation "org.springframework:spring-jms"
     implementation "org.springframework:spring-webmvc"
     implementation "org.springframework.data:spring-data-jpa"
