--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,7 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=3.19.0.5
+artifact.version=3.19.0.5.0
 
 context.path=inera-certificate
 
@@ -14,8 +14,8 @@ builder.image.tag=11.0.14
 runtime.image=tomcat-base
 runtime.image.tag=9.0.78.3
 
-dependencies.infra.version=3.21.0.+
-dependencies.common.version=3.21.0.+
+dependencies.infra.version=3.21.0.4
+dependencies.common.version=3.21.0.6
 
 dependencies.infra.version.resolved=3.21.0.4
 dependencies.common.version.resolved=3.21.0.6
