INTYGFV-16225: Added required properties for integration with HSA from intyg-proxy-service.

--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -30,6 +30,7 @@ db.pool.maxSize=5
 # Spring profile "h2" activates a H2 console on this port
 db.httpPort=8082
 
+integration.intygproxyservice.baseurl=http://localhost:18020
 internal.api.port=${dev.http.port.internal}
 
 redis.password=redis
