INTYGFV-16156: Added IcdCodeConverter to handle new format for ICD-10-SE file.

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -154,7 +154,5 @@ tsbas.send.certificate.to.recipient.registercertificate.version=v3
 #
 ################################################
 it.diagnosis.chapters.file=classpath:/diagnoskoder/diagnoskapitel.txt
-it.diagnosisCodes.icd10se.file1=classpath:/diagnoskoder/icd10se/digit3.txt
-it.diagnosisCodes.icd10se.file2=classpath:/diagnoskoder/icd10se/digit4.txt
-it.diagnosisCodes.icd10se.file3=classpath:/diagnoskoder/icd10se/digit5.txt
+it.diagnosisCodes.icd10se.file=classpath:/diagnoskoder/icd10se/icd-10-se.tsv
 it.diagnosisCodes.ksh97p_kod.file=classpath:/diagnoskoder/KSH97P_KOD.ANS
