INTYGFV-16428: Added functionality for sending statistics for certificates in certificate-service..

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -44,6 +44,7 @@ activemq.broker.password=
 activemq.destination.queue.name=certificate.queue
 activemq.internal.notification.queue.name=internal.notification.queue
 populate.loader.queueName=populateIT.loader.queue
+certificate.event.queue.name=intygstjanst.certificate.event.queue
 
 # NTjP SSL
 # TODO
