--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -30,6 +30,8 @@ db.pool.maxSize=5
 # Spring profile "h2" activates a H2 console on this port
 db.httpPort=8082
 
+certificateservice.base.url=http://localhost:18030
+
 integration.intygproxyservice.baseurl=http://localhost:18020
 internal.api.port=${dev.http.port.internal}
 
