--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ allprojects {
         testImplementation "junit:junit"
         testImplementation "org.junit.jupiter:junit-jupiter-api"
         testImplementation "org.junit.jupiter:junit-jupiter-params"
-        testImplementation "org.mockito:mockito-core"
+        testImplementation "org.mockito:mockito-inline"
         testImplementation "org.mockito:mockito-junit-jupiter"
         testImplementation "se.inera.intyg.refdata:refdata:${refDataVersion}"
 
