K1J-357: Update MySQL dialect (hibernate 6)

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -28,7 +28,7 @@ db.port=3306
 db.pool.maxSize=20
 
 # Hibernate stuff
-hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=
 hibernate.show_sql=false
 hibernate.format_sql=false
