K1J-354: Need to compile with -parameters for @Cacheable to work correctly in Spring 6.1+ (https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention)

--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,11 @@ allprojects {
         testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
     }
 
-    compileJava { options.encoding = "UTF-8" }
+    compileJava {
+        options.encoding = "UTF-8"
+        options.compilerArgs.add("-parameters")
+    }
+
     compileJava.dependsOn processResources
     test { useJUnitPlatform() }
 
