--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext {
     guavaVersion = "32.1.3-jre"
     jakartaJwsApiVersion = "3.0.0"
     jaxb2Version = "3.0.0"
+    logbackEcsEncoderVersion = "1.6.0"
     picocliVersion = "4.7.5"
     stAntlr4Version = "4.3.4"
     shedlockSpringVersion = "4.46.0"
