K1J-382: Added performance logging on heavy database queries. Includes refactoring of logging package to a gradle module in order to use it in the persistence module

--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -4,6 +4,8 @@ sourceSets.main.output.resourcesDir = sourceSets.main.output.getClassesDirs().ge
 jar.duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
 dependencies {
+    implementation project(':intygstjanst-logging')
+    
     implementation "com.fasterxml.jackson.core:jackson-annotations"
     implementation "com.google.guava:guava:${guavaVersion}"
     implementation "com.h2database:h2"
