--- a/settings.gradle
+++ b/settings.gradle
@@ -8,10 +8,13 @@ pluginManagement {
 
 rootProject.name = 'intygstjanst'
 
+include 'intygstjanst-logging'
 include ':intygstjanst-persistence'
 include ':intygstjanst-web'
 include ':intygstjanst-liquibase-runner'
 
+project(':intygstjanst-logging').projectDir = "$rootDir/logging" as File
 project(':intygstjanst-persistence').projectDir = "$rootDir/persistence" as File
 project(':intygstjanst-web').projectDir = "$rootDir/web" as File
 project(':intygstjanst-liquibase-runner').projectDir = "$rootDir/tools/liquibase-runner" as File
+
