K1J-475: Added salt to hashed personId logs. Minor cleanup for sonarqube.

--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -43,3 +43,5 @@ infrastructure.directory.logicalAddress=stub
 ntjp.ws.certificate.password=dummy
 ntjp.ws.key.manager.password=dummy
 ntjp.ws.truststore.password=dummy
+
+hash.salt=salt
