--- a/persistence/src/test/resources/test.properties
+++ b/persistence/src/test/resources/test.properties
@@ -2,3 +2,4 @@
 db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE;DB_CLOSE_DELAY=-1
 db.pool.maxSize=3
+hash.salt=salt
